--- a/config-repo/product-service.properties
+++ b/config-repo/product-service.properties
@@ -5,7 +5,7 @@ spring.application.name=product-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 # Actuator
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,mappings
 
 # H2 + JPA
 spring.datasource.url=jdbc:h2:mem:productdb
